--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,6 @@ jobs:
           toolchain: stable
           override: ture
           default: ture
+      - run: cargo version
       - run: cargo build --verbose
       - run: bash test.sh
