--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
-          components: clippy
-          override: ture
+          profile: complete
       - run: echo $PATH
       - run: cargo version
       - run: cargo build --verbose
