--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
-      - run: echo $PATH
+        with:
+          toolchain: nightly
+          override: ture
+          default: ture
       - run: cargo version
       - run: cargo build --verbose
       - run: bash test.sh
