--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,10 @@ jobs:
           default: ture
       - run: which cargo
       - run: ls /usr/share/rust/.cargo/bin/
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: version
       - run: cargo version
       - run: cargo build --verbose
       - run: bash test.sh
