--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: nightly
           override: true
       - run: which cargo
       - run: ls /usr/share/rust/.cargo/bin/
