--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+      - run: cargo build --verbose
       - run: bash test.sh
