crypto2のビルドにコケるので既存に合わせる

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -10,5 +10,6 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          override: true
       - name: run cargo clippy
         run: cargo clippy
