公式の最新に合っていなかったので、そちらに合わせることにする
Actionsがあった
https://github.com/actions-rs/clippy-check

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          components: clippy
           override: true
-      - name: run cargo clippy
-        run: cargo clippy
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
