発火条件変える

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 on:
-  release:
-    types: [published]
+  #  release:
+  #  types: [published]
+  push:
+    branch:
+      - master
 
 name: build and release stable version
 
