--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: create-release
-          path: release_upload_url.txte
+          path: release_upload_url.txt
 
   publish-release:
     needs: [create-release]
