--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Store zip
         uses: actions/upload-artifact@v2
         with:
-          name: linux(x86_64)_build
+          name: build-linux
           path: cece-linux-x86_64.zip
 
   create-release:
@@ -70,6 +70,6 @@ jobs:
           GITHUB_TOKEN: $｛｛ secrets.GITHUB_TOKEN ｝｝
         with:
           upload_url: $｛｛ steps.upload-url.outputs.url ｝｝
-          asset_path: cece-linux-x86_64.zip
-          asset_name: linux(x86_64)_build
+          asset_path: ./cece-linux-x86_64.zip
+          asset_name: cece-linux-x86_64.zip
           asset_content_type: application/zip
