--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,9 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: build-linux
+      - name: check current directory
+        run: |
+          ls -a
       - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: $｛｛ secrets.GITHUB_TOKEN ｝｝
