--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,12 +67,12 @@ jobs:
           name: build-linux
       - name: check current directory
         run: |
-          ls -a
+          ls -a ./build-linux
       - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: $｛｛ secrets.GITHUB_TOKEN ｝｝
         with:
           upload_url: $｛｛ steps.upload-url.outputs.url ｝｝
-          asset_path: ./cece-linux-x86_64.zip
+          asset_path: ./build-linux/cece-linux-x86_64.zip
           asset_name: cece-linux-x86_64.zip
           asset_content_type: application/zip
