--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 on:
-  #  release:
-  #  types: [published]
-  push:
-    branch:
-      - master
+  release:
+    types: [published]
 
 name: build and release stable version
 
