1行にまとめる

--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -22,9 +22,4 @@ jobs:
         run: |
           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
             -H "Authorization: token $GITHUB_TOKEN" \
-            -d @- << EOS \
-            { \
-              "ref": "refs/tags/${TAG}", \
-              "sha": "${COMMIT}" \
-            } \
-            EOS
+            -d '{ "ref": "refs/tags/${TAG}", "sha": "${COMMIT}" }'
