--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -21,5 +21,6 @@ jobs:
           COMMIT: ${{ github.sha }}
         run: |
           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
+            -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token $GITHUB_TOKEN" \
             -d '{ "ref": "refs/tags/${TAG}", "sha": "${COMMIT}" }'
