展開するのでダブルクォート

--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -22,4 +22,4 @@ jobs:
           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token $GITHUB_TOKEN" \
-            -d '{"ref":"refs/tags/release-$(date +\'%Y%m%d-%H%m\')","sha":"${COMMIT}"}'
+            -d '{"ref":"refs/tags/release-$(date +\"%Y%m%d-%H%m\")","sha":"${COMMIT}"}'
