--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -17,9 +17,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
-          COMMIT: ${{ github.sha }}
         run: |
           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token $GITHUB_TOKEN" \
-            -d '{"ref":"refs/tags/release-$(date +\"%Y%m%d-%H%m\")","sha":"${COMMIT}"}'
+            -d "{'ref':'refs/tags/release-$(date +\"%Y%m%d-%H%m\")','sha':'$GITHUB_COMMIT'}"
