--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -21,4 +21,4 @@ jobs:
           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token $GITHUB_TOKEN" \
-            -d "{'ref':'refs/tags/release-$(date +\"%Y%m%d-%H%m\")','sha':'$GITHUB_COMMIT'}"
+            -d "{\"ref\":\"refs/tags/release-$(date +\"%Y%m%d-%H%m\")\",\"sha\":\"$GITHUB_COMMIT\"}"
