スクリプトを呼び出す

--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -17,9 +17,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
-        run: |
-           echo "{\"ref\":\"refs/tags/release-$(date +"%Y%m%d-%H%m")\",\"sha\":"$GITHUB_COMMIT"}" | \
-           curl -s -X POST "https://api.github.com/repos/${REPO}/git/refs" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -d @-
+        run: sh ${GITHUB_WORKSPACE}/github/scripts/add-tag.sh
