--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,8 +15,8 @@ jobs:
           - x86_64-unknown-linux-musl
           - aarch64-unknown-linux-musl
           - i686-unknown-linux-musl
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
+          #- x86_64-apple-darwin
+          #- aarch64-apple-darwin
           - x86_64-pc-windows-gnu
           - i686-pc-windows-gnu
     steps:
