--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,25 +8,38 @@ on:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-20.04
     strategy:
       matrix:
         target: 
           - x86_64-unknown-linux-musl
           - aarch64-unknown-linux-musl
           - i686-unknown-linux-musl
-          #- x86_64-apple-darwin
-          #- aarch64-apple-darwin
+          - x86_64-apple-darwin
+          - aarch64-apple-darwin
           - x86_64-pc-windows-gnu
+          - i686-pc-windows-gnu
+        include:
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
+          - target: aarch64-unknown-linux-musl
+            os: ubuntu-latest
+          - target: i686-unknown-linux-musl
+            os: ubuntu-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
+          - target: i686-pc-windows-gnu
+            os: windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: install g++-aarch64-linux-gnu
         if: ${{ matrix.target == 'aarch64-unknown-linux-musl' }}
         run: sudo apt-get install g++-aarch64-linux-gnu
-      - name: install mingw-w64
-        if: ${{ matrix.target == 'x86_64-pc-windows-gnu' || matrix.target == 'i686-pc-windows-gnu' }}
-        run: sudo apt-get install mingw-w64
       - name: Setup rust
         uses: actions-rs/toolchain@v1
         with:
