--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,8 +16,8 @@ jobs:
           - i686-unknown-linux-musl
           - x86_64-apple-darwin
           - aarch64-apple-darwin
-          - x86_64-pc-windows-gnu
-          - i686-pc-windows-gnu
+          - x86_64-pc-windows-msvc
+          - i686-pc-windows-msvc
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
             os: macos-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
-          - target: i686-pc-windows-gnu
+          - target: i686-pc-windows-msvc
             os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
