--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,6 +10,7 @@ jobs:
   build-linux:
     strategy:
       matrix:
+        os: [macos-latest, ubuntu-latest, ubuntu-latest]
         target: 
           - x86_64-unknown-linux-musl
           - aarch64-unknown-linux-musl
