--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,15 +10,14 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, ubuntu-latest]
-        target: 
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-musl
-          - i686-unknown-linux-musl
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
-          - x86_64-pc-windows-msvc
-          - i686-pc-windows-msvc
+        #target: 
+        #  - x86_64-unknown-linux-musl
+        #  - aarch64-unknown-linux-musl
+        #  - i686-unknown-linux-musl
+        #  - x86_64-apple-darwin
+        #  - aarch64-apple-darwin
+        #  - x86_64-pc-windows-msvc
+        #  - i686-pc-windows-msvc
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
