--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,7 +20,7 @@ jobs:
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
-            os: macos-latest
+            os: macos-11
           - target: x86_64-pc-windows-msvc
             os: windows-latest
           - target: i686-pc-windows-msvc
