--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -87,6 +87,16 @@ jobs:
   publish-release:
     needs: [create-release]
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
+          - i686-unknown-linux-musl
+          - x86_64-apple-darwin
+          - aarch64-apple-darwin
+          - x86_64-pc-windows-msvc
+          - i686-pc-windows-msvc
     steps:
       - uses: actions/download-artifact@v1
         with:
