--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,17 +48,17 @@ jobs:
           command: build
           args: --target ${{ matrix.target }} --release
       - name: Package for linux
-        if: matrix.os == 'ubuntu-latest'
+        if: runner.os == 'Linux'
         run: |
           zip --junk-paths ${{ env.name }}-${{ matrix.target }} target/${{ matrix.target }}/release/${{ env.name }}
 
       - name: Package for macOS
-        if: matrix.os == 'macos-latest' || matrix.os == 'macos-11'
+        if: runner.os == 'macOS'
         run: |
           zip --junk-paths ${{ env.name }}-${{ matrix.target }} target/${{ matrix.target }}/release/${{ env.name }}
 
       - name: Package for windows
-        if: matrix.os == 'windows-latest'
+        if: runner.os == 'Windows'
         run: |
           powershell Compress-Archive -Path target/${{ matrix.target }}/release/${{ env.name }}.exe -DestinationPath ${{ env.name }}-${{ matrix.target }}.zip
       - uses: actions/upload-artifact@v2
