--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,92 +30,11 @@ jobs:
             os: windows-latest
           - target: i686-pc-windows-msvc
             os: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: install g++-aarch64-linux-gnu
-        if: ${{ matrix.target == 'aarch64-unknown-linux-musl' }}
-        run: sudo apt-get install g++-aarch64-linux-gnu
-      - name: Setup rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          target: ${{ matrix.target }}
-          override: true
-      - name: Release build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --target ${{ matrix.target }} --release
-      - name: Package for linux
-        if: runner.os == 'Linux'
-        run: |
-          zip --junk-paths ${{ env.name }}-${{ matrix.target }} target/${{ matrix.target }}/release/${{ env.name }}
-
-      - name: Package for macOS
-        if: runner.os == 'macOS'
-        run: |
-          zip --junk-paths ${{ env.name }}-${{ matrix.target }} target/${{ matrix.target }}/release/${{ env.name }}
-
-      - name: Package for windows
-        if: runner.os == 'Windows'
-        run: |
-          powershell Compress-Archive -Path target/${{ matrix.target }}/release/${{ env.name }}.exe -DestinationPath ${{ env.name }}-${{ matrix.target }}.zip
-      - uses: actions/upload-artifact@v2
-        with:
-          name: build-${{ matrix.target }}
-          path: ${{ env.name }}-${{matrix.target}}.zip
-
-  create-release:
-    runs-on: ubuntu-latest
-    steps:
-      - id: create-release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: true
-      - run: |
-          echo '${{ steps.create-release.outputs.upload_url }}' > release_upload_url.txt
-      - uses: actions/upload-artifact@v1
-        with:
-          name: create-release
-          path: release_upload_url.txt
+    outputs:
+      target: ${{ matrix.target }}
 
   publish-release:
-    needs: [build, create-release]
+    needs: [build]
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        target:
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-musl
-          - i686-unknown-linux-musl
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
-          - x86_64-pc-windows-msvc
-          - i686-pc-windows-msvc
     steps:
-      - uses: actions/download-artifact@v1
-        with:
-          name: create-release
-      - id: upload-url
-        run: |
-          echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
-      - uses: actions/download-artifact@v1
-        with:
-          name: build-${{ matrix.target }}
-      - name: check current directory
-        run: |
-          ls -a ./build-${{ matrix.target }}
-      - uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.upload-url.outputs.url }}
-          asset_path: ./build-${{ matrix.target }}/${{ env.name }}-${{ matrix.target }}.zip
-          asset_name: ${{ env.name }}-${{matrix.target}}.zip
-          asset_content_type: application/zip
+      run: echo ${{ needs.build.outputs.target}}
