--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,26 +10,31 @@ env:
   name: cece
 
 jobs:
+　make-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      include-matrix: ${{ steps.matrix.outputs.value }}
+    steps:
+      - name: make values
+        id: matrix
+        run: |
+          D=$(echo '[
+            { "target": "x86_64-unknown-linux-musl",  "os": "ubuntu-latest" },
+            { "target": "aarch64-unknown-linux-musl", "os": "ubuntu-latest" },
+            { "target": "i686-unknown-linux-musl",    "os": "ubuntu-latest" },
+            { "target": "x86_64-apple-darwin",        "os": "macos-latest" },
+            { "target": "aarch64-apple-darwin",       "os": "macos-11" },
+            { "target": "x86_64-pc-windows-msvc",     "os": "windows-latest" },
+            { "target": "i686-pc-windows-msvc",       "os": "windows-latest" }
+          ]' | jq -c .)
+          echo "::set-output name=value::${D}"
   build:
     name: build ${{ matrix.target }}
+    needs: [make-matrix]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-          - target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
-          - target: i686-unknown-linux-musl
-            os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: aarch64-apple-darwin
-            os: macos-11
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-          - target: i686-pc-windows-msvc
-            os: windows-latest
+        include: ${{fromJson(needs.make-matrix.outputs.include-matrix)}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
