--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,10 +13,11 @@ jobs:
   make-matrix:
     runs-on: ubuntu-latest
     outputs:
-      include-matrix: ${{ steps.matrix.outputs.value }}
+      include-matrix: ${{ steps.include-matrix.outputs.value }}
+      target-list: ${{ steps.target-list.outputs.value }}
     steps:
-      - name: make values
-        id: matrix
+      - name: make include-matrix
+        id: include-matrix
         run: |
           D=$(echo '[
             { "target": "x86_64-unknown-linux-musl",  "os": "ubuntu-latest" },
@@ -27,6 +28,11 @@ jobs:
             { "target": "x86_64-pc-windows-msvc",     "os": "windows-latest" },
             { "target": "i686-pc-windows-msvc",       "os": "windows-latest" }
           ]' | jq -c .)
+          echo "::set-output name=value::${D}"
+      - name: make target-list
+        id: target-list
+        run: |
+          D=$(echo ${{ steps.include-matrix.outputs.value }} | jq 'map(.target)')
           echo "::set-output name=value::${D}"
   build:
     name: build ${{ matrix.target }}
@@ -91,18 +97,11 @@ jobs:
           path: release_upload_url.txt
 
   publish-release:
-    needs: [build, create-release]
+    needs: [make-matrix, build, create-release]
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        target:
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-musl
-          - i686-unknown-linux-musl
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
-          - x86_64-pc-windows-msvc
-          - i686-pc-windows-msvc
+        target: ${{fromJson(needs.make-matrix.outputs.target-list)}}
     steps:
       - uses: actions/download-artifact@v1
         with:
