alpine の最新だけにする

--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -1,9 +1,9 @@
-FROM rust:alpine3.14 AS builder
+FROM rust:alpine AS builder
 WORKDIR /usr/src/cece
 RUN rustup toolchain install nightly
 COPY . .
 RUN cargo +nightly install --path .
 
-FROM alpine:3.14
+FROM alpine:latest
 COPY --from=builder /usr/local/cargo/bin/cece /usr/local/bin/cece
 CMD ["cece"]
