--- a/docker/bullseye/Dockerfile
+++ b/docker/bullseye/Dockerfile
@@ -7,4 +7,6 @@ RUN cargo +nightly install --target=x86_64-unknown-linux-musl --path .
 
 FROM debian:bullseye-slim
 COPY --from=builder /usr/local/cargo/bin/cece /usr/local/bin/cece
-CMD ["cece"]
+COPY docker-shell/docker-cece-entrypoint /usr/local/bin/docker-cece-entrypoint
+ENTRYPOINT ["docker-cece-entrypoint"]
+CMD ["cece", "-h"]
