--- a/docker/bullseye/Dockerfile
+++ b/docker/bullseye/Dockerfile
@@ -1,9 +1,8 @@
 FROM rust:bullseye AS builder
 WORKDIR /usr/src/cece
 RUN rustup toolchain install nightly
-RUN rustup +nightly target add x86_64-unknown-linux-musl
 COPY . .
-RUN cargo +nightly install --target=x86_64-unknown-linux-musl --path .
+RUN cargo +nightly install --path .
 
 FROM debian:bullseye-slim
 COPY --from=builder /usr/local/cargo/bin/cece /usr/local/bin/cece
