--- a/docker/bullseye/Dockerfile
+++ b/docker/bullseye/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:bullseye AS builder
+FROM rust:1-bullseye-slim AS builder
 WORKDIR /usr/src/cece
 RUN rustup toolchain install nightly
 COPY . .
