--- a/docker/buster/Dockerfile
+++ b/docker/buster/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1-buster-slim AS builder
+FROM rust:1-slim-buster AS builder
 WORKDIR /usr/src/cece
 RUN rustup toolchain install nightly
 COPY . .
