--- a/.github/workflows/snapshot-release.yml
+++ b/.github/workflows/snapshot-release.yml
@@ -1,9 +1,10 @@
-name: build and release stable version
+name: build and release snapshot version
 
 on:
-  push:
-    tags:
-      - 'release-*'
+  pull_request:
+    branches:
+      - master
+    types: [closed]
 
 env:
   name: cece
@@ -85,8 +86,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
           draft: false
           prerelease: true
       - run: |
