--- a/.github/workflows/snapshot-release.yml
+++ b/.github/workflows/snapshot-release.yml
@@ -91,7 +91,7 @@ jobs:
         with:
           include: 'v*'
           exclude: '*-rc*'
-          commit-ish: 'HEAD~'
+          commit-ish: 'HEAD'
 
   publish-release:
     name: publish ${{ matrix.target }}
