--- a/.github/workflows/snapshot-release.yml
+++ b/.github/workflows/snapshot-release.yml
@@ -92,6 +92,7 @@ jobs:
           include: 'v*'
           exclude: '*-rc*'
           commit-ish: 'HEAD'
+          abbrev: false
 
   publish-release:
     name: publish ${{ matrix.target }}
