--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rand_chacha = "0.3.1"
 base64 = "0.13.0"
 regex = "1.6"
 getopts = "0.2"
+once_cell = "1.13.0"
 
 [dev-dependencies]
 clippy = "0.0.302"
