--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -3,9 +3,9 @@ channel = "nightly"
 #components = [ "rustfmt", "rustc-dev" ]
 targets = [
     "x86_64-unknown-linux-musl",
-    "i686-unknown-linux-musl",
-    "x86_64-apple-darwin",
-    "x86_64-pc-windows-msvc",
-    "i686-pc-windows-msvc",
+#    "i686-unknown-linux-musl",
+#    "x86_64-apple-darwin",
+#    "x86_64-pc-windows-msvc",
+#    "i686-pc-windows-msvc",
 ]
 profile = "minimal"
