現在のテストは release を使っておいて問題ないので変更

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - run: cargo build --verbose
+      - run: cargo build --release --verbose
       - run: bash test.sh
