--- a/.github/workflows/add-release-tag.yml
+++ b/.github/workflows/add-release-tag.yml
@@ -1,9 +1,11 @@
 name: add release tag
 on:
   pull_request:
-    branches:
-      - master
-    types: [closed]
+#    branches:
+#      - master
+#    types: [closed]
+    branches-ignore:
+      - '**'
 
 jobs:
   release:
